--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^7.2",
+        "guzzlehttp/guzzle": "^7.0",
         "illuminate/support": "^6.0|^7.0"
     },
     "require-dev": {
